# GnuCashAutoInvoice

./: CMakeLists.txt  README.txt
src/: helpers.cpp  helpers.hpp  invoice_builder.cpp  invoice_builder.hpp  main.cpp  pdf_builder.cpp  pdf_builder.hpp  range.cpp  range.hpp  range_builder.cpp  range_builder.hpp
